# sigil-generator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  colors.c  colors.h  draw.c  draw.h  process_intent.c  process_intent.h  sigilize.c  sigilize.h  sigilize_config.h.in  util_macros.h
cmake/: FindCairo.cmake
